--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,7 @@
 /* para estilos generales de toda la pagina, incluso la estructura de flex */
 
 /* #root {
-    background-color: blue;
+    background-color: rgb(123, 255, 47);
     height: 100vh;
-    }
-     */
+    } */
+    
